# code_nitro

./: .gitignore  LICENSE  README.md  nitro.py  pyproject.toml  requirements.txt
codenitro/: config.py  gradient_inspired.py  nitro.py  painter.py  setup.py
src/: setup.py
src/nitro/: nitro.py
