[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "codenitro"
version = "1.1.1"
authors = [
  { name="Luke Salamone", email="lukesalamone94@gmail.com" },
]
description = "Code to image from the command line"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
    "Topic :: Utilities",
]
dependencies = [
    "Pillow>=10.0.0",
    "Pygments>=2.15.1",
    "requests>=2.31.0"
]

[project.urls]
"Homepage" = "https://github.com/lukesalamone/code_nitro"
"Bug Tracker" = "https://github.com/lukesalamone/code_nitro/issues"

[project.scripts]
nitro = "codenitro.nitro:main"

[tool.setuptools]
packages = ["codenitro"]
